src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__generated_files@shaders__compiled__wc_flow_outward.comp.json.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: shaders/compiled/wc_flow_outward.comp.json
---
{
  "sourceFileName": "wc_flow_outward.compute.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "Params",
        "fields": [
          {
            "kind": "resource",
            "fieldName": "blurredMask",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 1,
              "count": 1
            },
            "resourceShape": "texture2D",
            "resultType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "resource",
            "fieldName": "wetMask",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 2,
              "count": 1
            },
            "resourceShape": "texture2D",
            "resultType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "resource",
            "fieldName": "pressure",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 3,
              "count": 1
            },
            "resourceShape": "rWTexture2D",
            "resultType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "resource",
            "fieldName": "saturation",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 4,
              "count": 1
            },
            "resourceShape": "rWTexture2D",
            "resultType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "vector",
            "fieldName": "gridSize",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 8
            },
            "elementCount": 2,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "scalar",
            "fieldName": "eta",
            "binding": {
              "kind": "uniform",
              "offset": 8,
              "size": 4
            },
            "scalarType": "float32"
          }
        ]
      }
    }
  ],
  "computeEntryPoint": {
    "entryPointName": "computeMain",
    "stage": "compute",
    "parameters": []
  },
  "workgroupSize": [
    16,
    16,
    1
  ],
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          },
          {
            "binding": 1,
            "descriptorType": "texture",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          },
          {
            "binding": 2,
            "descriptorType": "texture",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          },
          {
            "binding": 3,
            "descriptorType": "storageImage",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          },
          {
            "binding": 4,
            "descriptorType": "storageImage",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          }
        ]
      }
    ],
    "pushConstantRanges": []
  }
}
