src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__generated_files@shaders__compiled__wc_move_pigment.comp.json.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: shaders/compiled/wc_move_pigment.comp.json
---
{
  "sourceFileName": "wc_move_pigment.compute.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "Params",
        "fields": [
          {
            "kind": "resource",
            "fieldName": "pigmentIn",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 1,
              "count": 1
            },
            "resourceShape": "texture2D",
            "resultType": {
              "kind": "vector",
              "elementCount": 4,
              "elementType": {
                "kind": "scalar",
                "scalarType": "float32"
              }
            }
          },
          {
            "kind": "resource",
            "fieldName": "uIn",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 2,
              "count": 1
            },
            "resourceShape": "texture2D",
            "resultType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "resource",
            "fieldName": "vIn",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 3,
              "count": 1
            },
            "resourceShape": "texture2D",
            "resultType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "resource",
            "fieldName": "wetMask",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 4,
              "count": 1
            },
            "resourceShape": "texture2D",
            "resultType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "resource",
            "fieldName": "pigmentOut",
            "binding": {
              "kind": "descriptorTableSlot",
              "index": 5,
              "count": 1
            },
            "resourceShape": "rWTexture2D",
            "resultType": {
              "kind": "vector",
              "elementCount": 4,
              "elementType": {
                "kind": "scalar",
                "scalarType": "float32"
              }
            }
          },
          {
            "kind": "vector",
            "fieldName": "gridSize",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 8
            },
            "elementCount": 2,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          },
          {
            "kind": "scalar",
            "fieldName": "dt",
            "binding": {
              "kind": "uniform",
              "offset": 8,
              "size": 4
            },
            "scalarType": "float32"
          }
        ]
      }
    }
  ],
  "computeEntryPoint": {
    "entryPointName": "computeMain",
    "stage": "compute",
    "parameters": []
  },
  "workgroupSize": [
    16,
    16,
    1
  ],
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          },
          {
            "binding": 1,
            "descriptorType": "texture",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          },
          {
            "binding": 2,
            "descriptorType": "texture",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          },
          {
            "binding": 3,
            "descriptorType": "texture",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          },
          {
            "binding": 4,
            "descriptorType": "texture",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          },
          {
            "binding": 5,
            "descriptorType": "storageImage",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          }
        ]
      }
    ],
    "pushConstantRanges": []
  }
}
